# coding-battle-backend

./: .gitignore  Cargo.toml  README.md  pom.xml
.cargo/: config.toml
.github/workflows/: maven.yml
guest-template/: Cargo.toml  wit-bindgen.toml
host/: Cargo.toml
host/src/: main.rs
interface/: Cargo.toml  build.rs  my_interface.wit
src/: main.rs
src/main/java/dev/zwazel/: BotInterface.java  BotLoader.java  GameState.java  Main.java  Move.java  RockPaperScissorsGame.java  SimulationApplication.java  SimulationServer.java
src/main/java/dev/zwazel/DTO/: AllLobbiesDTO.java  CompileResponse.java  CompileResultDTO.java  CreateLobbyRequestDTO.java  PublicUserDTO.java
src/main/java/dev/zwazel/api/controller/: BotController.java  LobbyController.java  SimulationController.java  UserController.java
src/main/java/dev/zwazel/api/hal/model/: BotModel.java  (+2 more)
src/main/java/dev/zwazel/config/: DevSecurityConfig.java  SecurityConfig.java
src/main/java/dev/zwazel/controller/: BotController.java  LobbyController.java  SimulationController.java  UserCodeController.java
src/main/java/dev/zwazel/domain/: Bot.java  Role.java  User.java
src/main/java/dev/zwazel/exception/: BotNameAlreadyExistsException.java  BotNotFoundException.java  GlobalExceptionHandler.java  RoleNotFoundException.java  UserNotFoundException.java  UsernameAlreadyExistsException.java
src/main/java/dev/zwazel/language/: Language.java  LanguageToWASMCompilerInterface.java
src/main/java/dev/zwazel/language/compilers/: RustToWasmCompiler.java
src/main/java/dev/zwazel/model/: GameState.java  Lobby.java  LobbyEvent.java  LobbyEventType.java  LobbyUser.java  Player.java
src/main/java/dev/zwazel/model/language/: Language.java  LanguageToWASMCompilerInterface.java
src/main/java/dev/zwazel/repository/: BotRepository.java  RoleRepository.java  UserRepository.java
src/main/java/dev/zwazel/security/: AuthController.java  AuthService.java  CookieJwtFilter.java  CustomUserPrincipal.java  JwtAuthFilter.java  JwtAuthenticationManager.java  JwtKeyConfig.java  JwtServerAuthenticationConverter.java  JwtService.java  JwtUtil.java  SecurityConfig.java
src/main/java/dev/zwazel/seed/: DevSeeder.java  GeneralSeeder.java
src/main/java/dev/zwazel/service/: BotService.java  LobbyService.java  SimulationService.java  StorageService.java  UserCodeService.java  UserDetailsService.java  UserService.java
src/main/resources/: application-dev.properties  application.properties  schema.sql
src/test/java/dev/zwazel/api/controller/: UserControllerTest.java
src/test/resources/: application-test.properties
submissions/: MyBot1.java  MyBot2.java
wasm/: wasi.wasm
(+7 files in other folders)
