[package]
name = "coding-battle-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
wasmtime = "28"
wasmtime-wasi = "28"
wit-bindgen = "0.37.0"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable a lot of optimization in release mode
[profile.release]
codegen-units = 1
lto = "thin"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
